# Hybrid

./: .gitignore  INSTALL.md  Makefile  README.md  claude.md  pyproject.toml  requirements-gpu.txt  requirements.txt  run_final_demo.py  run_integrated_scheduler_demo.py
data/labels/: fuqing_haitan_wind_farm.xml  pingtan_wind_farm.xml  putian_nanri_wind_farm_phase1_2.xml  xinghua_bay_wind_farm.xml  兴化湾海上风电场.xml
docs/: charging_decision_maker_usage.md  cleanup_completed.md  code_cleanup_guide.md  fixes_summary.md  integrated_scheduler_summary.md  marine_obstacles_update.md  pygame_fixes_summary.md  task_allocation_technical_design.md
scripts/: view_logs.py
src/: __init__.py  demo.py
src/config/: __init__.py  config_loader.py  config_validator.py  default.yaml
src/planner/: __init__.py  base_planner.py  hca_star.py  opt_2opt.py
src/scheduler/: __init__.py  base_scheduler.py  charging_decision_maker.py  dynamic_reallocator.py  energy_aware_scheduler.py  integrated_scheduler.py  rl_agent.py  usv_logistics_scheduler.py
src/utils/: __init__.py  energy.py
src/visualization/: __init__.py  advanced_island_detector.py  charging_station.py  enhanced_pygame_visualizer.py  enhanced_scene_parser.py  enhanced_threaded_pygame_visualizer.py  experiment_platform.py  final_enhanced_visualizer.py  optimized_pygame_visualizer.py  simple_pygame_demo.py  visualizer.py
tests/: __init__.py  conftest.py  test_charging_decision_maker.py  test_dynamic_reallocator.py  test_energy.py  test_hca_star.py  test_satellite_scene.py
